z-index fix

--- a/src/components/Header/nav/style.module.scss
+++ b/src/components/Header/nav/style.module.scss
@@ -5,7 +5,7 @@
     right: 0;
     top: 0;
     color: white;
-    z-index: 3;
+    z-index: 999;
 
     // ✅ desktop এ fixed width, mobile এ full width
     width: 480px;
